# datalake-medallion-assignment

./: .gitignore  README.md  pyproject.toml
app/data/raw/department/: department_data.csv
app/data/raw/employee/: employee_data.csv
app/data/raw/payroll_sample/: payroll_sample.csv
app/src/: script.py
app/src/config/: config.json
app/src/loaders/: config_loader.py
app/src/mappers/: config_mapper.py
app/src/models/: config_model.py  pipeline_orchestrator_model.py
app/src/utils/: logger.py
app/src/writers/: csv_writer.py
